--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
         <script src="./assets/js/main.js" defer></script>
     </head>
     <body>
-
+        <br>
         <form id="form_even_odd">
-            <input type="text" id="user_word" placeholder="Pari o dispari?" required>
-            <input type="number" id="user_number" placeholder="Scegli un numero da 1 a 5" required>
+            <input type="text" id="user_word" placeholder="Pari o dispari?"
+                required>
+            <input type="number" id="user_number"
+                placeholder="Scegli un numero da 1 a 5" required>
 
             <button id="btn_even_odd">Gioca!</button>
-        </form>     
-
+            <button id="clear">Clear</button>
+        </form>
+        <br>
         <div class="cpu_number"></div>
+        <br>
+        <div class="sum"></div>
+        <br>
+        <div id="result"></div>
     </body>
 </html>
