--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="./assets/js/main.js" defer></script>
     </head>
     <body>
+        <h1>Even or Odd</h1>
         <br>
         <form id="form_even_odd">
             <input type="text" id="user_word" placeholder="Pari o dispari?"
